[gd_scene load_steps=7 format=3 uid="uid://hnh8mnniyyal"]

[ext_resource type="Script" uid="uid://br5djtjbgogak" path="res://scenes/dialogues/dialogues.gd" id="1_1gcki"]
[ext_resource type="Texture2D" uid="uid://b40qifkircejg" path="res://images/enter_button.png" id="3_1lc76"]

[sub_resource type="LabelSettings" id="LabelSettings_bgcd3"]
font_size = 18
outline_size = 34
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1lc76"]
font_size = 18
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lc76"]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_psddv"]
line_spacing = 2.0
paragraph_spacing = 2.0
font_size = 20
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[node name="Dialogues" type="Node2D"]
script = ExtResource("1_1gcki")

[node name="DialogueScreenComponents" type="Node2D" parent="."]

[node name="ButtonsDescription" type="Node2D" parent="DialogueScreenComponents"]
visible = false

[node name="EButton" type="Label" parent="DialogueScreenComponents/ButtonsDescription"]
offset_left = 233.0
offset_top = 271.0
offset_right = 273.0
offset_bottom = 297.0
text = "E"
label_settings = SubResource("LabelSettings_bgcd3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGameLabel" type="Label" parent="DialogueScreenComponents/ButtonsDescription"]
offset_left = 481.0
offset_top = 231.0
offset_right = 793.0
offset_bottom = 332.0
text = ":  Skip & Start "
label_settings = SubResource("LabelSettings_1lc76")
vertical_alignment = 1

[node name="EnterButton" type="Sprite2D" parent="DialogueScreenComponents/ButtonsDescription"]
position = Vector2(439, 281)
scale = Vector2(0.192871, 0.162354)
texture = ExtResource("3_1lc76")
region_enabled = true
region_rect = Rect2(151.161, 86.9446, 684.982, 678.866)

[node name="NexLineLabel" type="Label" parent="DialogueScreenComponents/ButtonsDescription"]
offset_left = 273.0
offset_top = 232.0
offset_right = 585.0
offset_bottom = 333.0
text = ":  Next Line  "
label_settings = SubResource("LabelSettings_1lc76")
vertical_alignment = 1

[node name="DialogueBar" type="Label" parent="DialogueScreenComponents"]
offset_left = 45.0
offset_top = 72.0
offset_right = 736.0
offset_bottom = 182.0
theme_override_styles/normal = SubResource("StyleBoxFlat_1lc76")
text = "
"
label_settings = SubResource("LabelSettings_psddv")

[node name="CanPressSpaceTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="CanPressSpaceTimer" to="." method="_on_can_press_space_timer_timeout"]
